[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-support-triage"
version = "1.0.0"
description = "OpenEnv Support Triage Environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "pyyaml==6.0.1",
    "openai==1.35.0",
    "requests==2.32.3",
    "httpx==0.27.0",
    "python-multipart==0.0.9"
]
